--- a/style/kaltura.css
+++ b/style/kaltura.css
@@ -21,7 +21,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 
 
-#modalbox{ position: fixed; left: 50%; top:50%; margin:-180px 0 0 -340px; background:#262626; border:3px solid #666; width: 680px; z-index: 100; }
+#modalbox{ position: fixed; left: 50%; top:50%; margin:-180px 0 0 -340px; border:3px solid #666; width: 680px; z-index: 100; }
 
 #kaltura_overlay{ position: fixed; top: 0; left: 0; z-index: 99; width: 100%; height: 100%; background:url('../images/transBG.png') 0 0 repeat; cursor: wait; }
 
@@ -160,9 +160,10 @@ div.ktitle h3 { padding:0px; margin:0px; }
 #sidemenu { bottom:-1px; font-weight:normal; left:0; margin:0 0px; padding:0px; position:relative;}
 
 #sidemenu li { background:#787878; display:inline; border-bottom-style:none; line-height:200%; list-style-image:none; list-style-position:outside; list-style-type:none; margin:0; padding:0px; text-align:center; white-space:nowrap;}
+#sidemenu li.close {position:absolute; right:10px; top:-2px;}
 #sidemenu span {background:#787878; color:#787878; display:inline; border-bottom-style:none; line-height:200%; list-style-image:none; list-style-position:outside; list-style-type:none; margin:0; padding-left:200px; text-align:center; white-space:nowrap;}
-#sidemenu span.close {background:#787878; color:#787878; display:inline; border-bottom-style:none; line-height:200%; list-style-image:none; list-style-position:outside; list-style-type:none; margin:0; padding-left:20px; text-align:center; white-space:nowrap; background-image: url('../images/close_up.png'); background-position:right; background-repeat:no-repeat; cursor:pointer}
-#sidemenu span.close:hover {background:#787878; color:#787878; display:inline; border-bottom-style:none; line-height:200%; list-style-image:none; list-style-position:outside; list-style-type:none; margin:0; padding-left:20px; text-align:center; white-space:nowrap; background-image: url('../images/close_over.png'); background-position:right; background-repeat:no-repeat; cursor:pointer}
+#sidemenu span.close {background:#787878; color:#787878; display:inline; border-bottom-style:none; line-height:200%; list-style-image:none; list-style-position:outside; list-style-type:none; margin:0; padding-left:20px; text-align:center; white-space:nowrap; background-image: url('../images/close_up.png'); background-position:right 0; background-repeat:no-repeat; cursor:pointer}
+#sidemenu span.close:hover {background:#787878; color:#787878; display:inline; border-bottom-style:none; line-height:200%; list-style-image:none; list-style-position:outside; list-style-type:none; margin:0; padding-left:20px; text-align:center; white-space:nowrap; background-image: url('../images/close_over.png'); background-position:right 0; background-repeat:no-repeat; cursor:pointer}
 
 #sidemenu a { padding:6px; color:#D8D8D8; text-decoration:none; background:#787878 none repeat scroll 0 0; }
 
